--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,37 +4,24 @@
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         tools:context=".MainActivity">
 
-   <ImageView
-           android:id="@+id/img_logo"
-           android:layout_width="match_parent"
-           android:layout_height="70dp"
-           android:src="@drawable/antaranews"
-           android:layout_marginBottom="16dp"
-           app:layout_constraintStart_toStartOf="parent"
-           app:layout_constraintEnd_toEndOf="parent"
-           app:layout_constraintTop_toTopOf="parent"
+   <include
+           android:id="@+id/included"
+           layout="@layout/nav_title"/>
 
-   />
-
-   <TextView
-           android:id="@+id/tv_antara_description"
+   <androidx.constraintlayout.widget.ConstraintLayout
+           xmlns:android="http://schemas.android.com/apk/res/android"
+           xmlns:tools="http://schemas.android.com/tools"
+           xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
-           android:text="@string/berita_terkini_dan_terpercaya_indonesia"
-           android:textSize="15sp"
-           android:gravity="center"
-           android:textStyle="italic"
+           app:layout_constraintTop_toBottomOf="@+id/included"
+           app:layout_constraintStart_toStartOf="@id/included"
+           app:layout_constraintEnd_toEndOf="@id/included"
            android:layout_marginTop="8dp"
-           android:layout_marginStart="8dp"
-           android:layout_marginEnd="8dp"
-           app:layout_constraintTop_toBottomOf="@id/img_logo"
-           app:layout_constraintStart_toStartOf="@+id/img_logo"
-           app:layout_constraintEnd_toEndOf="@+id/img_logo"
-
-   />
+           tools:context=".MainActivity">
 
    <TextView
            android:id="@+id/tv_antara_title"
@@ -43,13 +30,12 @@
            android:text="@string/berita_terkini_antara_news"
            android:textSize="20sp"
            android:textStyle="bold"
-           android:layout_marginTop="16dp"
+           android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
-           app:layout_constraintTop_toBottomOf="@+id/tv_antara_description"
-           app:layout_constraintStart_toStartOf="@id/tv_antara_description"
-           app:layout_constraintEnd_toEndOf="@id/tv_antara_description"
-
+           app:layout_constraintTop_toTopOf="parent"
+           app:layout_constraintStart_toStartOf="parent"
+           app:layout_constraintEnd_toEndOf="parent"
    />
 
    <androidx.recyclerview.widget.RecyclerView
@@ -57,12 +43,12 @@
            android:id="@+id/rv_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
-           android:layout_marginTop="30dp"
+           android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_antara_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_antara_title"
            app:layout_constraintEnd_toEndOf="@id/tv_antara_title"
            app:layout_constraintVertical_bias="0.1"/>
-
+   </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
