--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -5,7 +5,6 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/blue"
         tools:context=".AboutActivity">
 <androidx.cardview.widget.CardView
         android:id="@+id/cv_about"
@@ -19,43 +18,103 @@
     <ImageView
             android:id="@+id/img_about"
             android:layout_width="match_parent"
-            android:layout_height="250dp"
-            android:src="@drawable/myphoto"
+            android:layout_height="450dp"
+            android:src="@drawable/back_photo"
+            android:scaleType="fitXY"
             />
-
 </androidx.cardview.widget.CardView>
+    <de.hdodenhof.circleimageview.CircleImageView
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:src="@drawable/myphoto"
+            android:scaleType="centerCrop"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="@id/guideline"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:elevation="10dp"
+            android:translationZ="10dp"
+            app:civ_border_width="3dp"
+            app:civ_border_color="@color/black"
+            app:layout_constraintVertical_bias="0.81"/>
 
     <androidx.constraintlayout.widget.Guideline
             android:orientation="horizontal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintGuide_begin="296dp"
+            app:layout_constraintGuide_begin="450dp"
             android:id="@+id/guideline"/>
-
-    <TextView
-            android:id="@+id/name_about"
+    <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Heydie Zuliansyah"
-            android:textSize="30sp"
-            android:textStyle="bold"
-            app:layout_constraintTop_toBottomOf="@id/guideline"
+            app:layout_constraintTop_toTopOf="@id/guideline"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:gravity="center"
-    />
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:orientation="vertical"
+            app:layout_constraintVertical_bias="0.16000003">
+        <TextView
+                android:id="@+id/about_me_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/about_me"
+                android:gravity="center"
+                android:textSize="20sp"
+                android:layout_gravity="center"
+                android:layout_marginTop="16dp"
+                android:textStyle="italic"
+        />
 
-    <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="helsarayta@gmail.com"
-            android:textSize="30sp"
-            android:textStyle="bold"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@id/name_about"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:gravity="center"
-    />
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:layout_marginTop="16dp"
+                android:gravity="center"
+                android:textStyle="bold"
+                android:text="@string/name"
+        />
+        <TextView
+                android:id="@+id/name_about"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/heydie_zuliansyah"
+                android:textSize="20sp"
+                android:gravity="center"
+                android:textStyle="bold"
+                android:textColor="#275497"
+        />
+
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:gravity="center"
+                android:layout_marginTop="16dp"
+                android:textStyle="bold"
+                android:text="@string/email"
+        />
+
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/helsarayta_gmail_com"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:textColor="#275497"
+                android:gravity="center"
+        />
+
+        <ImageButton
+                android:id="@+id/btn_linkedin"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:src="@drawable/linkedin"
+                android:scaleType="centerInside"
+                android:padding="5dp"
+                android:layout_marginTop="16dp"
+                android:layout_gravity="center"
+                android:contentDescription="@string/linkedin"/>
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
