--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,11 +16,12 @@
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
-           android:layout_height="wrap_content"
+           android:layout_height="620dp"
            app:layout_constraintTop_toBottomOf="@+id/included"
            app:layout_constraintStart_toStartOf="@id/included"
            app:layout_constraintEnd_toEndOf="@id/included"
            android:layout_marginTop="8dp"
+           android:layout_marginBottom="8dp"
            tools:context=".MainActivity">
 
    <TextView
@@ -42,7 +43,7 @@
            tools:listitem="@layout/row_news"
            android:id="@+id/rv_list"
            android:layout_width="match_parent"
-           android:layout_height="wrap_content"
+           android:layout_height="500dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_antara_title"
