--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,8 +2,12 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.NewsAntara" parent="Theme.Material3.DayNight">
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+         <item name="colorPrimary">@color/red</item>
     </style>
 
+    <!-- Splash screen theme without action bar -->
+    <style name="SplashTheme" parent="Theme.Material3.DayNight.NoActionBar">
+        <item name="colorPrimary">@color/red</item>
+    </style>
     <style name="Theme.NewsAntara" parent="Base.Theme.NewsAntara"/>
 </resources>
