--- a/app/src/main/res/layout-land/activity_detail.xml
+++ b/app/src/main/res/layout-land/activity_detail.xml
@@ -7,8 +7,42 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         tools:context=".DetailActivity">
+<LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+>
+    <include
+            layout="@layout/nav_title"
+    />
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+    >
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/berita_hari_ini"
+                android:textSize="25sp"
+                android:textStyle="bold"
+                android:textColor="@color/red"
+                android:gravity="center"
+        />
 
-   <include layout="@layout/nav_title"/>
+        <TextView
+                android:id="@+id/detail_time"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:textColor="@color/red"
+                android:text="@string/_2023_11_10_03_18_12"
+        />
+
+    </LinearLayout>
+</LinearLayout>
     <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
@@ -16,7 +50,6 @@
             android:background="#000000" />
 
     <ScrollView
-            android:id="@+id/sv_detail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
@@ -27,20 +60,13 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
         >
-            <TextView
-                    android:id="@+id/detail_time"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:text="@string/_2023_11_10_03_18_12"
-            />
+
             <ImageView
                     android:id="@+id/detail_img"
                     android:layout_width="match_parent"
-                    android:layout_height="270dp"
+                    android:layout_height="370dp"
                     android:src="@drawable/photo"
             />
-
             <TextView
                     android:id="@+id/detail_title"
                     android:layout_width="match_parent"
@@ -48,7 +74,7 @@
                     android:text="@string/terapi_tradisional_tiongkok_ini_bantu_pulihkan_pasien_serangan_jantung"
                     android:textSize="30sp"
                     android:textStyle="bold"
-                    android:layout_margin="5dp"
+                    android:layout_margin="16dp"
             />
 
             <TextView
@@ -57,7 +83,8 @@
                     android:layout_height="wrap_content"
                     android:text="@string/sebuah_penelitian_menemukan_bahwa_pengobatan_tradisional_tiongkok_quot_tongxinluo_quot_dapat_memberikan_manfaat_ketika_digunakan_sebagai_terapi_tambahan_bagi_pasien_yang_baru_pulih_dari_serangan_jantung_medical_daily"
                     android:textSize="18sp"
-                    android:layout_margin="8dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginEnd="16dp"
             />
 
             <TextView
@@ -66,7 +93,7 @@
                     android:layout_height="wrap_content"
                     android:text="@string/selengkapnya_link_https_www_antaranews_com_berita_3816546_terapi_tradisional_tiongkok_ini_bantu_pulihkan_pasien_serangan_jantung"
                     android:autoLink="web"
-                    android:layout_margin="8dp"
+                    android:layout_margin="16dp"
                     android:textSize="18sp"
                     android:textStyle="italic"
                     android:layout_marginBottom="8dp"
